--- a/docs/mcp-installation.mdx
+++ b/docs/mcp-installation.mdx
@@ -16,7 +16,7 @@ Installations represent the team layer in DeployStack's three-tier configuration
 
 DeployStack uses a three-layer system to manage MCP servers:
 
-1. **Global MCP Catalog**: A centralized library of all available MCP servers
+1. **Global MCP Catalog**: A centralized library of all available MCP servers (including both official registry servers synced from registry.modelcontextprotocol.io and manually created custom integrations)
 2. **Team Access**: Your team can browse and select servers you have permission to use
 3. **Team Installations**: Your team's actual configured instances of MCP servers
 
@@ -104,6 +104,7 @@ Behind the scenes, your team's installations are stored securely:
 
 - **Your Environment**: Runs in your team's deployment environment
 - **Direct Control**: Full control over the server instance
+- **Multiple Sources**: Install servers from the official MCP Registry or use custom manually-created servers
 - **Flexible Configuration**: Team-level and user-level configuration options
 - **Secure Setup**: Uses DeployStack's three-tier configuration system
 
