--- a/docs/mcp-team-installation.mdx
+++ b/docs/mcp-team-installation.mdx
@@ -23,13 +23,15 @@ For an overview of the three-tier system, see [MCP Configuration System](/mcp-co
 
 **The Installation Flow:**
 
-1. **Browse Catalog** - Find MCP servers in the global catalog
+1. **Browse Catalog** - Find MCP servers in the global catalog (includes both official registry servers synced from registry.modelcontextprotocol.io and manually created servers)
 2. **Select Server** - Choose a server that meets your team's needs
 3. **Configure Team Settings** - Set shared credentials and parameters
 4. **Set Lock Controls** - Decide what users can and cannot modify
 5. **Deploy Installation** - Make the server available to team members
 
 Each installation gets a meaningful name like "DevOps Team Filesystem" or "Customer Support Database" to help team members understand its purpose.
+
+**Server Sources**: When browsing the catalog, you'll see servers from multiple sources - official registry servers (automatically synced and marked with badges) and manually created custom integrations. Both types work identically with DeployStack's three-tier configuration system.
 
 The configuration options available to you are determined by how the global administrator categorized elements during schema creation. You can only configure elements that were designated as "Team Configurable" in the original schema definition.
 
